--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -43,25 +43,97 @@
 
         <section data-markdown>
           <textarea data-template>
-            ## Iniciación a Angular
-
-            <img src="img/angularlogo.png">
-            
-            Luis José Sánchez
+            <table>
+              <tr>
+                <td style="width: 50%;">
+                  <div>
+                    <h3 style="text-align: center;">Animaciones en Angular</h3>
+                  </div>
+                  <div style="text-align: center;">
+                    <img class="circulo" src="img/angularlogo.png" width="160px">
+                  </div>
+                </td>
+                <td>
+                  <div><h3 style="text-align: center;">Luis José Sánchez</h3></div>
+                  <div style="text-align: center;">
+                    <img class="circulo" src="img/luisjose.png" width="160px">
+                  </div>
+                  <!--
+                  <div style="text-align: center;">
+                    <i class="fa fa-twitter" aria-hidden="true"></i> [@luisjoseprofe](https://twitter.com/luisjoseprofe)
+                  </div>
+                -->
+                </td>
+              </tr>
+            </table>
           </textarea>
         </section>
 
         <section data-markdown>
           <textarea data-template>
-            ### <i class="fa fa-television" aria-hidden="true"></i> Presentación
-            ### https://goo.gl/FrzsT9
-            
-            <br>
+            ### <i class="fa fa-television" aria-hidden="true"></i> Presentación y ejemplos
+            ### https://goo.gl/guVcx6
 
-            ### <i class="fa fa-code" aria-hidden="true"></i> Ejemplos
-            ### https://goo.gl/xbvbWf
+            <img src="img/qr.png" alt="">
           </textarea>
         </section>
+
+        <section data-background="img/spice.jpg">
+        </section>
+
+        <section data-markdown data-transition="fade-out">
+          <textarea data-template>
+            <img src="img/anicss.png" alt="" width="600px">
+          </textarea>
+        </section>
+
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Instalación 1/3
+
+            ```console
+            npm install @angular/animations@latest --save
+            ```
+          </textarea>
+        </section>
+
+        <section data-markdown>
+            <textarea data-template>
+              ## Instalación 2/3
+  
+              app.module.ts
+              ```console
+              import {
+                BrowserAnimationsModule
+              } from '@angular/platform-browser/animations';
+  
+              @NgModule({
+                imports: [
+                  BrowserAnimationsModule
+                ],
+              })
+              ```
+            </textarea>
+          </section>
+
+          <section data-markdown>
+            <textarea data-template>
+              ## Instalación 3/3
+  
+              ejemplo.component.ts
+              ```console
+              import {
+                trigger,
+                state,
+                style,
+                animate,
+                transition,
+                keyframes
+              } from '@angular/animations';
+              ```
+            </textarea>
+          </section>
 
         <section data-markdown data-transition="fade-out">
           <textarea data-template>
@@ -84,15 +156,6 @@
               ### <strike>[angularjs.org](https://angularjs.org/)</strike>
             </textarea>
           </section>
-
-        <section data-background="img/spaghetti.jpg">
-        </section>
-
-        <section data-background="img/lasagna.jpg">
-        </section>
-
-        <section data-background="img/ravioli.jpg">
-        </section>
 
         <section data-markdown>
             <textarea data-template>
