--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -134,63 +134,11 @@
               ```
             </textarea>
           </section>
-
-        <section data-markdown data-transition="fade-out">
-          <textarea data-template>
-            ## Angular
-            (versiones 2, 4...)
-            ### [angular.io](https://angular.io/)
-            <br><br>            
-            ## AngularJS 1.X
-            ### [angularjs.org](https://angularjs.org/)
-          </textarea>
-        </section>
-
-        <section data-markdown data-transition="fade-in">
-            <textarea data-template>
-              ## Angular
-              (versiones 2, 4...)
-              ### [angular.io](https://angular.io/)
-              <br><br>            
-              ## <strike>AngularJS 1.X</strike>
-              ### <strike>[angularjs.org](https://angularjs.org/)</strike>
-            </textarea>
-          </section>
-
-        <section data-markdown>
-            <textarea data-template>
-              ## ¿Qué es Angular?
-  
-              * Plataforma para Front-End
-              * Creado por Google
-              * Ideal para SPA
-              * Basado en componentes
-              * Usa Typescript
-            </textarea>
-          </section>
-
+        
         <section data-markdown>
           <textarea data-template>
-            ## Angular CLI
-
-            ```console
-            ng new mi-proyecto
-            cd mi-proyecto
-            ng serve
-            ```
-
-            ```console
-            ng g component mi-componente
-            ```
+            <img src="img/examples.jpg" alt="" width="600px">
           </textarea>
-        </section>
-
-        <section data-markdown>
-            <textarea data-template>
-              ## ¡MANOS A LA OBRA!
-  
-              ### https://goo.gl/xbvbWf
-            </textarea>
         </section>
         
         <section data-markdown>
