--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -45,24 +45,25 @@
           <textarea data-template>
             <table>
               <tr>
-                <td style="width: 50%;">
-                  <div>
-                    <h3 style="text-align: center;">Animaciones en Angular</h3>
-                  </div>
+                <td style="width: 33%;">
                   <div style="text-align: center;">
-                    <img class="circulo" src="img/angularlogo.png" width="160px">
+                    <img class="circulo" src="img/angularlogo.png" width="190px">
+                  </div>
+                  <div>
+                    <h4 style="text-align: center;">Animaciones en Angular</h4>
                   </div>
                 </td>
                 <td>
-                  <div><h3 style="text-align: center;">Luis José Sánchez</h3></div>
                   <div style="text-align: center;">
-                    <img class="circulo" src="img/luisjose.png" width="160px">
+                    <img class="circulo" src="img/luisjose.png" width="180px">
                   </div>
-                  <!--
+                  <div><h4 style="text-align: center;">Luis José Sánchez</h4></div>
+                </td>
+                <td style="width: 33%;">
                   <div style="text-align: center;">
-                    <i class="fa fa-twitter" aria-hidden="true"></i> [@luisjoseprofe](https://twitter.com/luisjoseprofe)
+                    <img class="circulo" src="img/espiral.png" width="180px">
                   </div>
-                -->
+                  <div><h4 style="text-align: center;">Espiral</h4></div>
                 </td>
               </tr>
             </table>
