--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -141,7 +141,21 @@
             <img src="img/examples.jpg" alt="" width="600px">
           </textarea>
         </section>
-        
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Ejemplos
+            
+            <ol>
+              <li class="fragment">Funcionamiento básico</li>
+              <li class="fragment">Animación de varios elementos</li>
+              <li class="fragment">Keyframes (animaciones por pasos)</li>
+              <li class="fragment">Stagger (animaciones escalonadas)</li>
+              <li class="fragment">Animaciones con enrutamiento</li>
+            </ol>
+          </textarea>
+        </section>
+
         <section data-markdown>
           <textarea data-template>
               ### Créditos de las imágenes
