--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -180,6 +180,8 @@
             
             Luis José Sánchez
 
+            <i class="fa fa-envelope" aria-hidden="true"></i> [luisjose@espiral.io](mailto:luisjose@espiral.io)
+
             <i class="fa fa-twitter" aria-hidden="true"></i> [@luisjoseprofe](https://twitter.com/luisjoseprofe)
             
             <i class="fa fa-github" aria-hidden="true"></i> [github.com/LuisJoseSanchez](https://github.com/LuisJoseSanchez)
